# magnolia

./: .cursorignore  CMakeLists.txt  Makefile  README.md  partitions.csv  qemu.sh  sdkconfig  sdkconfig.defaults  sdkconfig.old
applets/: ELF_TARGETS.txt
applets/build_elf_file_example/: sdkconfig
applets/cat/: CMakeLists.txt
applets/cd/: CMakeLists.txt
applets/chmod/: CMakeLists.txt
applets/chown/: CMakeLists.txt
applets/cp/: CMakeLists.txt
applets/cut/: CMakeLists.txt
applets/date/: CMakeLists.txt
applets/df/: CMakeLists.txt
applets/du/: CMakeLists.txt
applets/echo/: CMakeLists.txt
applets/elftest/: CMakeLists.txt  Makefile  main.c  managed_components
applets/env/: CMakeLists.txt
applets/false/: CMakeLists.txt
applets/free/: CMakeLists.txt
applets/goargs/: CMakeLists.txt  README.md
applets/gohello/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
applets/gohello/main/: CMakeLists.txt  main.c  tinygo_symbols.S
applets/gotest/: CMakeLists.txt  README.md
applets/head/: CMakeLists.txt
applets/init/: CMakeLists.txt
applets/kill/: CMakeLists.txt
applets/ln/: CMakeLists.txt  sdkconfig
applets/login/: CMakeLists.txt
applets/ls/: CMakeLists.txt
applets/mkdir/: CMakeLists.txt
applets/mv/: CMakeLists.txt
applets/ps/: CMakeLists.txt
applets/pwd/: CMakeLists.txt
applets/rm/: CMakeLists.txt
applets/rselftest/: CMakeLists.txt
applets/rshello/: CMakeLists.txt  README.md  sdkconfig
applets/rusthello/: CMakeLists.txt
applets/sh/: CMakeLists.txt
applets/shell/: CMakeLists.txt
applets/sleep/: CMakeLists.txt
applets/sort/: CMakeLists.txt
applets/tail/: CMakeLists.txt
applets/tee/: CMakeLists.txt
applets/test/: CMakeLists.txt
applets/touch/: CMakeLists.txt
applets/tr/: CMakeLists.txt
applets/true/: CMakeLists.txt
applets/uname/: CMakeLists.txt
applets/user/: CMakeLists.txt  printf.c  sdkconfig  ulib.c  user.h
applets/zigdemo/: CMakeLists.txt
applets/zighello/: CMakeLists.txt  sdkconfig.defaults
applets/zighello/main/: CMakeLists.txt  dummy.c  zighello.zig
applets/zigtest/: CMakeLists.txt
cmake/: littlefs_mkimage.c  magnolia_rust_applet.cmake  magnolia_zig.cmake
design/: ipc_2a_plan.md  milestone9_pipes_spec.txt  shm_module_spec.txt
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/kernel/arch/: m_arch.h  m_hw_init.c  m_hw_init.h
main/kernel/arch/common/: m_arch_cpu_impl.c  m_arch_memory_impl.c  m_arch_power_impl.c
main/kernel/arch/elf/: m_elf_riscv.c  m_elf_xtensa.c
main/kernel/arch/riscv/esp32c3/: memory.c  start.c
main/kernel/arch/riscv/esp32c6/: start.c
main/kernel/arch/riscv/esp32h2/: start.c
main/kernel/arch/riscv/esp32p4/: cpu.c  start.c
main/kernel/arch/xtensa/esp32/: power.c  start.c
main/kernel/arch/xtensa/esp32s2/: start.c
main/kernel/arch/xtensa/esp32s3/: cpu.c  start.c
main/kernel/core/elf/: Kconfig.elf  m_elf_app_api.c  m_elf_app_api.h  m_elf_loader.c  m_elf_loader.h  m_elf_platform.c  m_elf_platform.h  m_elf_symbol.c  m_elf_symbol.h  m_elf_types.h
main/kernel/core/elf/tests/: m_elf_tests.c  m_elf_tests.h
main/kernel/core/ipc/: Kconfig.ipc  Kconfig.ipc_channel  Kconfig.ipc_event_flags  Kconfig.ipc_root  Kconfig.ipc_shm  Kconfig.ipc_signal  Kconfig.ipc_waitset  ipc.c  ipc.h  ipc_channel.c  ipc_channel.h  ipc_channel_private.h  ipc_core.c  ipc_core.h  ipc_diag.c  ipc_diag.h  ipc_event_flags.c  ipc_event_flags.h  ipc_event_flags_private.h  ipc_scheduler_bridge.c  ipc_scheduler_bridge.h  ipc_shm.c  ipc_shm.h  ipc_shm_private.h  ipc_signal.c  ipc_signal.h  ipc_signal_private.h  ipc_waitset.h
main/kernel/core/ipc/tests/: ipc_channel_tests.c  ipc_channel_tests.h  ipc_event_flags_tests.c  ipc_event_flags_tests.h  ipc_shm_tests.c  ipc_shm_tests.h  ipc_signal_tests.c  ipc_signal_tests.h
main/kernel/core/job/: Kconfig.job  jctx.c  jctx.h  jctx_public.h  m_job.c  m_job.h  m_job_core.c  m_job_core.h  m_job_diag.c  m_job_diag.h  m_job_event.c  m_job_event.h  m_job_future.c  m_job_future.h  m_job_queue.c  m_job_queue.h  m_job_result.c  m_job_result.h  m_job_wait.c  m_job_wait.h  m_job_worker.c  m_job_worker.h
main/kernel/core/job/tests/: m_job_tests.c  m_job_tests.h
main/kernel/core/libc/: m_libc_compat.c  m_libc_compat.h
main/kernel/core/memory/: Kconfig.memory  m_alloc.c  m_alloc.h
main/kernel/core/memory/tests/: m_alloc_tests.c  m_alloc_tests.h
main/kernel/core/sched/: Kconfig.sched  m_sched.c  m_sched.h  m_sched_core.c  m_sched_core.h  m_sched_core_internal.h  m_sched_diag.c  m_sched_diag.h  m_sched_sleep.c  m_sched_sleep.h  m_sched_wait.c  m_sched_wait.h  m_sched_worker.c  m_sched_worker.h
main/kernel/core/sched/tests/: m_sched_tests.c  m_sched_tests.h
main/kernel/core/timer/: Kconfig.timer  m_timer.c  m_timer.h  m_timer_core.c  m_timer_core.h  m_timer_deadline.c  m_timer_deadline.h  m_timer_diag.c  m_timer_diag.h  m_timer_queue.c  m_timer_queue.h
main/kernel/core/timer/tests/: m_timer_tests.c  m_timer_tests.h
main/kernel/core/vfs/: Kconfig.vfs  m_vfs.h  m_vfs_diag.h  m_vfs_types.h
main/kernel/core/vfs/cache/: m_vfs_read_cache.c  m_vfs_read_cache.h
main/kernel/core/vfs/core/: m_vfs_core.c  m_vfs_errno.c  m_vfs_errno.h  m_vfs_jobcwd.c  m_vfs_jobcwd.h  m_vfs_object.c  m_vfs_object.h  m_vfs_registry.c  m_vfs_registry.h  m_vfs_selftests.c  m_vfs_selftests.h  m_vfs_test.c  m_vfs_test.h  m_vfs_wait.h
main/kernel/core/vfs/diag/: m_vfs_diag.c
main/kernel/core/vfs/fd/: m_vfs_fd.c  m_vfs_fd.h
main/kernel/core/vfs/path/: m_vfs_path.c  m_vfs_path.h
main/kernel/core/vfs/ramfs/: ramfs.c  ramfs.h
main/kernel/vfs/fs/devfs/: Kconfig.devfs  devfs.c  devfs.h  devfs_diag.h  devfs_internal.h  devfs_ioctl.h  devfs_shm.h  devfs_stream.c  devfs_stream.h  devfs_stream_devices.c  devfs_tests.c  devfs_tests.h
main/kernel/vfs/fs/littlefs/: lfs_backend_flash.c  lfs_backend_flash.h  littlefs_fs.c  littlefs_fs.h  littlefs_tests.c  littlefs_tests.h
main/lib/libexec/: job_ctx.c  job_ctx.h
tools/: applet_check.py  applets.py  magnolia_mklfs.c  new_tinygo_applet.py  symbols.py  zig_applet.py  zig_xtensa_toolchain.py
(+103 files in other folders)
